--- a/src/KoganCubic/appsettings.json
+++ b/src/KoganCubic/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "EndPoint": "http://wp8m3he1wt.s3-website-ap-southeast-2.amazonaws.com/api/products/1"
+  "EndPoint": "http://wp8m3he1wt.s3-website-ap-southeast-2.amazonaws.com"
 }
